docs-archive/apache-airflow-providers-cncf-kubernetes/8.0.0/_sources/_api/airflow/providers/cncf/kubernetes/operators/pod/index.rst.txt
:py:mod:`airflow.providers.cncf.kubernetes.operators.pod`
=========================================================

.. py:module:: airflow.providers.cncf.kubernetes.operators.pod

.. autoapi-nested-parse::

   Executes task in a Kubernetes POD.



Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.cncf.kubernetes.operators.pod.KubernetesPodOperator




Attributes
~~~~~~~~~~

.. autoapisummary::

   airflow.providers.cncf.kubernetes.operators.pod.alphanum_lower
   airflow.providers.cncf.kubernetes.operators.pod.KUBE_CONFIG_ENV_VAR


.. py:data:: alphanum_lower

   

.. py:data:: KUBE_CONFIG_ENV_VAR
   :value: 'KUBECONFIG'

   

.. py:exception:: PodReattachFailure


   Bases: :py:obj:`airflow.exceptions.AirflowException`

   When we expect to be able to find a pod but cannot.


.. py:class:: KubernetesPodOperator(*, kubernetes_conn_id = KubernetesHook.default_conn_name, namespace = None, image = None, name = None, random_name_suffix = True, cmds = None, arguments = None, ports = None, volume_mounts = None, volumes = None, env_vars = None, env_from = None, secrets = None, in_cluster = None, cluster_context = None, labels = None, reattach_on_restart = True, startup_timeout_seconds = 120, startup_check_interval_seconds = 1, get_logs = True, container_logs = BASE_CONTAINER_NAME, image_pull_policy = None, annotations = None, container_resources = None, affinity = None, config_file = None, node_selector = None, image_pull_secrets = None, service_account_name = None, hostnetwork = False, host_aliases = None, tolerations = None, security_context = None, container_security_context = None, dnspolicy = None, dns_config = None, hostname = None, subdomain = None, schedulername = None, full_pod_spec = None, init_containers = None, log_events_on_failure = False, do_xcom_push = False, pod_template_file = None, pod_template_dict = None, priority_class_name = None, pod_runtime_info_envs = None, termination_grace_period = None, configmaps = None, skip_on_exit_code = None, base_container_name = None, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), poll_interval = 2, log_pod_spec_on_failure = True, on_finish_action = 'delete_pod', is_delete_operator_pod = None, termination_message_policy = 'File', active_deadline_seconds = None, callbacks = None, progress_callback = None, logging_interval = None, **kwargs)


   Bases: :py:obj:`airflow.models.BaseOperator`

   Execute a task in a Kubernetes Pod.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:KubernetesPodOperator`

   .. note::
       If you use `Google Kubernetes Engine <https://cloud.google.com/kubernetes-engine/>`__
       and Airflow is not running in the same cluster, consider using
       :class:`~airflow.providers.google.cloud.operators.kubernetes_engine.GKEStartPodOperator`, which
       simplifies the authorization process.

   :param kubernetes_conn_id: The :ref:`kubernetes connection id <howto/connection:kubernetes>`
       for the Kubernetes cluster.
   :param namespace: the namespace to run within kubernetes.
   :param image: Docker image you wish to launch. Defaults to hub.docker.com,
       but fully qualified URLS will point to custom repositories. (templated)
   :param name: name of the pod in which the task will run, will be used (plus a random
       suffix if random_name_suffix is True) to generate a pod id (DNS-1123 subdomain,
       containing only [a-z0-9.-]).
   :param random_name_suffix: if True, will generate a random suffix.
   :param cmds: entrypoint of the container. (templated)
       The docker images's entrypoint is used if this is not provided.
   :param arguments: arguments of the entrypoint. (templated)
       The docker image's CMD is used if this is not provided.
   :param ports: ports for the launched pod.
   :param volume_mounts: volumeMounts for the launched pod.
   :param volumes: volumes for the launched pod. Includes ConfigMaps and PersistentVolumes.
   :param env_vars: Environment variables initialized in the container. (templated)
   :param env_from: (Optional) List of sources to populate environment variables in the container.
   :param secrets: Kubernetes secrets to inject in the container.
       They can be exposed as environment vars or files in a volume.
   :param in_cluster: run kubernetes client with in_cluster configuration.
   :param cluster_context: context that points to kubernetes cluster.
       Ignored when in_cluster is True. If None, current-context is used. (templated)
   :param reattach_on_restart: if the worker dies while the pod is running, reattach and monitor
       during the next try. If False, always create a new pod for each try.
   :param labels: labels to apply to the Pod. (templated)
   :param startup_timeout_seconds: timeout in seconds to startup the pod.
   :param startup_check_interval_seconds: interval in seconds to check if the pod has already started
   :param get_logs: get the stdout of the base container as logs of the tasks.
   :param container_logs: list of containers whose logs will be published to stdout
       Takes a sequence of containers, a single container name or True. If True,
       all the containers logs are published. Works in conjunction with get_logs param.
       The default value is the base container.
   :param image_pull_policy: Specify a policy to cache or always pull an image.
   :param annotations: non-identifying metadata you can attach to the Pod.
       Can be a large range of data, and can include characters
       that are not permitted by labels. (templated)
   :param container_resources: resources for the launched pod. (templated)
   :param affinity: affinity scheduling rules for the launched pod.
   :param config_file: The path to the Kubernetes config file. (templated)
       If not specified, default value is ``~/.kube/config``
   :param node_selector: A dict containing a group of scheduling rules.
   :param image_pull_secrets: Any image pull secrets to be given to the pod.
       If more than one secret is required, provide a
       comma separated list: secret_a,secret_b
   :param service_account_name: Name of the service account
   :param hostnetwork: If True enable host networking on the pod.
   :param host_aliases: A list of host aliases to apply to the containers in the pod.
   :param tolerations: A list of kubernetes tolerations.
   :param security_context: security options the pod should run with (PodSecurityContext).
   :param container_security_context: security options the container should run with.
   :param dnspolicy: dnspolicy for the pod.
   :param dns_config: dns configuration (ip addresses, searches, options) for the pod.
   :param hostname: hostname for the pod.
   :param subdomain: subdomain for the pod.
   :param schedulername: Specify a schedulername for the pod
   :param full_pod_spec: The complete podSpec
   :param init_containers: init container for the launched Pod
   :param log_events_on_failure: Log the pod's events if a failure occurs
   :param do_xcom_push: If True, the content of the file
       /airflow/xcom/return.json in the container will also be pushed to an
       XCom when the container completes.
   :param pod_template_file: path to pod template file (templated)
   :param pod_template_dict: pod template dictionary (templated)
   :param priority_class_name: priority class name for the launched Pod
   :param pod_runtime_info_envs: (Optional) A list of environment variables,
       to be set in the container.
   :param termination_grace_period: Termination grace period if task killed in UI,
       defaults to kubernetes default
   :param configmaps: (Optional) A list of names of config maps from which it collects ConfigMaps
       to populate the environment variables with. The contents of the target
       ConfigMap's Data field will represent the key-value pairs as environment variables.
       Extends env_from.
   :param skip_on_exit_code: If task exits with this exit code, leave the task
       in ``skipped`` state (default: None). If set to ``None``, any non-zero
       exit code will be treated as a failure.
   :param base_container_name: The name of the base container in the pod. This container's logs
       will appear as part of this task's logs if get_logs is True. Defaults to None. If None,
       will consult the class variable BASE_CONTAINER_NAME (which defaults to "base") for the base
       container name to use.
   :param deferrable: Run operator in the deferrable mode.
   :param poll_interval: Polling period in seconds to check for the status. Used only in deferrable mode.
   :param log_pod_spec_on_failure: Log the pod's specification if a failure occurs
   :param on_finish_action: What to do when the pod reaches its final state, or the execution is interrupted.
       If "delete_pod", the pod will be deleted regardless its state; if "delete_succeeded_pod",
       only succeeded pod will be deleted. You can set to "keep_pod" to keep the pod.
   :param is_delete_operator_pod: What to do when the pod reaches its final
       state, or the execution is interrupted. If True (default), delete the
       pod; if False, leave the pod.
       Deprecated - use `on_finish_action` instead.
   :param termination_message_policy: The termination message policy of the base container.
       Default value is "File"
   :param active_deadline_seconds: The active_deadline_seconds which translates to active_deadline_seconds
       in V1PodSpec.
   :param callbacks: KubernetesPodOperatorCallback instance contains the callbacks methods on different step
       of KubernetesPodOperator.
   :param progress_callback: Callback function for receiving k8s container logs.
       `progress_callback` is deprecated, please use :param `callbacks` instead.
   :param logging_interval: max time in seconds that task should be in deferred state before
       resuming to fetch the latest logs. If ``None``, then the task will remain in deferred state until pod
       is done, and no logs will be visible until that time.

   .. py:attribute:: BASE_CONTAINER_NAME
      :value: 'base'

      

   .. py:attribute:: ISTIO_CONTAINER_NAME
      :value: 'istio-proxy'

      

   .. py:attribute:: KILL_ISTIO_PROXY_SUCCESS_MSG
      :value: 'HTTP/1.1 200'

      

   .. py:attribute:: POD_CHECKED_KEY
      :value: 'already_checked'

      

   .. py:attribute:: POST_TERMINATION_TIMEOUT
      :value: 120

      

   .. py:attribute:: template_fields
      :type: Sequence[str]
      :value: ('image', 'cmds', 'annotations', 'arguments', 'env_vars', 'labels', 'config_file',...

      

   .. py:attribute:: template_fields_renderers

      

   .. py:method:: pod_manager()


   .. py:method:: hook()


   .. py:method:: client()


   .. py:method:: find_pod(namespace, context, *, exclude_checked = True)

      Return an already-running pod for this task instance if one exists.


   .. py:method:: get_or_create_pod(pod_request_obj, context)


   .. py:method:: await_pod_start(pod)


   .. py:method:: extract_xcom(pod)

      Retrieve xcom value and kill xcom sidecar container.


   .. py:method:: execute(context)

      Based on the deferrable parameter runs the pod asynchronously or synchronously.


   .. py:method:: execute_sync(context)


   .. py:method:: execute_async(context)


   .. py:method:: invoke_defer_method(last_log_time = None)

      Redefine triggers which are being used in child classes.


   .. py:method:: raise_for_trigger_status(event)
      :staticmethod:

      Raise exception if pod is not in expected state.


   .. py:method:: trigger_reentry(context, event)

      Point of re-entry from trigger.

      If ``logging_interval`` is None, then at this point the pod should be done and we'll just fetch
      the logs and exit.

      If ``logging_interval`` is not None, it could be that the pod is still running and we'll just
      grab the latest logs and defer back to the trigger again.


   .. py:method:: execute_complete(context, event, **kwargs)


   .. py:method:: write_logs(pod)


   .. py:method:: post_complete_action(*, pod, remote_pod, **kwargs)

      Actions that must be done after operator finishes logic of the deferrable_execution.


   .. py:method:: cleanup(pod, remote_pod)


   .. py:method:: is_istio_enabled(pod)

      Check if istio is enabled for the namespace of the pod by inspecting the namespace labels.


   .. py:method:: kill_istio_sidecar(pod)


   .. py:method:: process_pod_deletion(pod, *, reraise=True)


   .. py:method:: patch_already_checked(pod, *, reraise=True)

      Add an "already checked" annotation to ensure we don't reattach on retries.


   .. py:method:: on_kill()

      Override this method to clean up subprocesses when a task instance gets killed.

      Any use of the threading, subprocess or multiprocessing module within an
      operator needs to be cleaned up, or it will leave ghost processes behind.


   .. py:method:: build_pod_request_obj(context = None)

      Return V1Pod object based on pod template file, full pod spec, and other operator parameters.

      The V1Pod attributes are derived (in order of precedence) from operator params, full pod spec, pod
      template file.


   .. py:method:: dry_run()

      Print out the pod definition that would be created by this operator.

      Does not include labels specific to the task instance (since there isn't
      one in a dry_run) and excludes all empty elements.



